# personalized-chess-trainer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
analysis/: evaluate_thresholds.py
docs/: evaluation.md
src/chess_trainer/: __main__.py  analyze.py  config.py  db.py  extract.py  ingest.py  models.py  profile.py  train.py
tests/: conftest.py  test_ingest.py  test_profile_train.py  test_scores.py
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: _headers
web/scripts/: copy-engine.mjs
web/src/: analysis.ts  chesscom.ts  curate.ts  dates.ts  db.ts  engine.ts  extract.ts  main.ts  pipeline.ts  profile.ts  progress.ts  review.ts  types.ts
web/src/demo/: demoFixture.ts
web/src/ui/: animate.ts  app.ts  board-logic.ts  board.ts  celebrate.ts  dom.ts  styles.css
web/src/ui/screens/: analyzing.ts  drill.ts  landing.ts  profile.ts  summary.ts
web/tests/: analysis-game.test.ts  analysis-score.test.ts  animate.test.ts  board-logic.test.ts  chesscom.test.ts  curate.test.ts  db-analyses.test.ts  db-migration.test.ts  db-open.test.ts  db-progress.test.ts  db-puzzles-review.test.ts  demo-fixture.test.ts  engine-parse.test.ts  engine.test.ts  extract-filter.test.ts  extract.test.ts  hint.test.ts  motif.test.ts  pipeline-persist.test.ts  pipeline.test.ts  profile-helpers.test.ts  progress.test.ts  review-select.test.ts  review.test.ts  summary.test.ts
